# schema/openapi/openapi.yaml
@@ -8470,6 +8470,8 @@ components:
         - id
         - employee_id
         - employment_status
+        - contracted_hours_per_week
+        - punch_required
         - join_date
         - status
         - metadata
@@ -8482,6 +8484,10 @@ components:
           format: uuid
         employment_status:
           type: string
+        contracted_hours_per_week:
+          type: string
+        punch_required:
+          type: boolean
         join_date:
           type: string
           format: date
@@ -8528,6 +8534,8 @@ components:
       required:
         - employee_id
         - employment_status
+        - contracted_hours_per_week
+        - punch_required
         - join_date
         - status
         - metadata
@@ -8537,6 +8545,10 @@ components:
           format: uuid
         employment_status:
           type: string
+        contracted_hours_per_week:
+          type: string
+        punch_required:
+          type: boolean
         join_date:
           type: string
           format: date
@@ -8570,6 +8582,8 @@ components:
       required:
         - employee_id
         - employment_status
+        - contracted_hours_per_week
+        - punch_required
         - join_date
         - status
         - metadata
@@ -8579,6 +8593,10 @@ components:
           format: uuid
         employment_status:
           type: string
+        contracted_hours_per_week:
+          type: string
+        punch_required:
+          type: boolean
         join_date:
           type: string
           format: date
@@ -8615,6 +8633,10 @@ components:
           format: uuid
         employment_status:
           type: string
+        contracted_hours_per_week:
+          type: string
+        punch_required:
+          type: boolean
         join_date:
           type: string
           format: date
